Release 3.5.7
=============

Bugs fixed
----------

- Building the C-extension could fail when the C compiler is not
  C99-compatible or requires to be specified C99 compatibility
  (issue #963).

Changes
-------

- The default for the :class:`contextvars.ContextVar` holding
  conversion rules (:obj:`rpy2.robjects.conversion.converter`)
  is now a dummy converter raising errors about missing
  conversion rules. This behavior helps with troubleshooting
  Python code using multithreading without fetching the context
  (see issue #965).


Release 3.5.6
=============

Bugs fixed
----------

- :class:`rpy2.rlike.container.OrdDict` objects were triggering an
  error when unpickled (PR #955).

- Function signature mapping not longer assumes that all default
  values are R vectors mapped to a `Vector` instance (PR #954).


Release 3.5.5
=============

New features
------------
  
- For ipython and Jupyter notebooks, R "magics" accepting optional input arguments
  (`-i` or `--input`) can now be of form `<python-name>` or
  `<r-name>=<python-name>`. The former is the way is has been working so far:
  the R object is given the name of the Python object. The latter allows to
  specify the name under which the input object will be known to R. In addition
  to that the python name can optionally be a path, that is a name nested in a
  sequence of namespaces. For example, `-i module.varname`. The magics
  concerned are `%R`, `%%R`, and `%Rpush` (issues #934 and #935).

- For ipython and Jupyter notebooks, R "magics" accepting an optional conversion
  argument (`-c/--converter`) now also accepts names that are a path in Python,
  that is a name nested in a sequence of namespaces. For example,
  `-c rpy2.robjects.default_converter` (issue #934).

- The "magic" `%Rpush` accepts an optional argument `-c/--converter` that is
  similar in nature to the argument of the same name in `%R` and `%%R`.

Bugs fixed
----------
